# argus_gui

./: .gitignore  .hgignore  Argus.yaml  Argus_dev.yaml  README.md  output.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  testScript.py  test_opengl_fallback.py  test_warnings_fix.py
.github/workflows/: deploy-docs.yml  jekyll.yml
.hg/: dirstate  hgrc  undo.desc
.hg/cache/: branch2-served
.hg/store/: 00changelog.i  00manifest.i  fncache  undo  undo.backup.fncache  undo.backup.phaseroots
.hg/store/data/: _r_e_a_d_m_e.md.i  setup.py.i  ~2ehgignore.i
.hg/store/data/argus__gui/: ____init____.py.i  ____init____.pyc.i  clicker_window.py.i  clicker_window.pyc.i  colors.py.i  colors.pyc.i  frame_finder_pyglet.py.i  frame_finder_pyglet.pyc.i  graphers.py.i  graphers.pyc.i  gui.py.i  logger.py.i  logger.pyc.i  output.py.i  output.pyc.i  patterns.py.i  patterns.pyc.i  sba_driver.py.i  sba_driver.pyc.i  sync.py.i  sync.pyc.i  tools.py.i  tools.pyc.i  triangulate.py.i  triangulate.pyc.i  undistort.py.i  version.py.i
.hg/store/data/argus__gui.egg-info/: _p_k_g-_i_n_f_o.i  _s_o_u_r_c_e_s.txt.i  dependency__links.txt.i  requires.txt.i  top__level.txt.i
.hg/store/data/argus__gui/gui/: ____init____.py.i  ____init____.pyc.i  base.py.i  base.pyc.i
.hg/store/data/argus__gui/resources/: ____init____.py.i  ____init____.pyc.i  _l_i_c_e_n_s_e.txt.i  calib-gui-paddings.txt.i  dwarp-gui-paddings.txt.i  libsba.dll.i  libsba.dylib.i  libsba.so.i  libsba__p3.dll.d  libsba__p3.dll.i  libsbaprojs.dll.i  libsbaprojs.dylib.i  libsbaprojs.so.i  libsbaprojs__p3.dll.i  patterns-gui-paddings.txt.i  sba__lib__sources.tar.gz.d  sba__lib__sources.tar.gz.i  sync-gui-paddings.txt.i  ~2e__dwarp-gui-paddings.txt.i  ~2e__sync-gui-paddings.txt.i
.hg/store/data/argus__gui/resources/calibrations/: readme.txt.i  (+8 more)
.hg/store/data/conda__envs/: _argus.yaml.i
argus_gui/: Argus.py  GUI_test.py  __init__.py  __main__.py  arrayImage.py  colors.py  external_function.py  frameFinderPyglet.py  graphers.py  gui.py  guiTester.py  logTest.py  logger.py  output.py  patterns.py  sbaDriver.py  sync.py  tools.py  triangulate.py  undistort.py  version.py
argus_gui.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  requires.txt  top_level.txt
argus_gui/resources/: Argus-Documentation_2.1.3.odt  LICENSE.txt  __init__.py  calib-gui-paddings.txt  guiTest.py  libsba.dylib  libsba_a64.dylib  libsba_x64.dylib  libsbaprojs.dylib  patterns-gui-paddings.txt
argus_gui/resources/calibrations/: GoPro Hero3 Black.csv  GoPro Hero4 Black.csv
argus_gui/resources/scripts/: Argus  Argus_win.py  argus-calibrate  argus-click  argus-dwarp  argus-log  argus-patterns  argus-show  argus-sync  argus-wand
docs/: Gemfile  _config.yml  citation.md  conf.py  deeplabcut.md  index.md  installation.md  quick-start.md  troubleshooting.md  user-guide.md
docs/assets/css/: style.scss
docs/images/: sync_img.pxd
memory/: plan.md  session.md
utils/: DLCbatch.py  calibrate_charuco.py
(+34 files in other folders)
