[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argus_gui"
version = "3.0.0"
description = "Tools for 3D camera calibration and reconstruction with graphical user interfaces"
readme = "README.md"
license = {text = "GNU GPLv3"}
authors = [
    {name = "Dylan Ray", email = "ddray1993@gmail.com"},
    {name = "Dennis Evangelista"}
]
keywords = ["calibration", "camera", "camera calibration", "photogrammetry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Multimedia :: Graphics :: Capture :: Digital Camera",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering"
]
requires-python = ">=3.10"
dependencies = [
    "numpy >= 1.19.0",
    "pandas >= 1.0.0",
    "matplotlib >= 3.0.0",
    "opencv-python >= 4.0.0",
    "pyopengl",
    "pyglet >= 2.0.16, < 2.1.0",
    "moviepy >= 1.0.0",
    "Pmw >= 1.3.3",
    "texttable >= 0.8.3",
    "sba @ git+https://github.com/backyardbiomech/python-sba.git@python310",
    "audioread >= 2.1.1",
    "psutil >= 5.0.0",
    "argus @ git+https://github.com/backyardbiomech/argus.git@python310",
    "pykalman",
    "future >= 0.16.0",
    "PyYAML >= 5.0",
    "pyside6 >= 6.4",
    "pyqtgraph >= 0.13.7",
    "imageio >= 2.0.0",
    "imageio-ffmpeg",
]

[project.urls]
Homepage = "http://argus.web.unc.edu"
Repository = "https://github.com/backyardbiomech/argus_gui"

[project.scripts]
argus-gui = "argus_gui.Argus:main"

[tool.setuptools]
packages = ["argus_gui", "argus_gui.resources"]
include-package-data = true
zip-safe = false

# For standalone script files, we need to use the legacy scripts approach
# This requires keeping the scripts section in setup.py or using setup.cfg

[tool.setuptools.package-data]
"argus_gui.resources" = ["*.*", "scripts/*.*", "icons/*.*", "calibrations/*.*"]
