[options]
scripts = 
    argus_gui/resources/scripts/argus-dwarp
    argus_gui/resources/scripts/argus-click
    argus_gui/resources/scripts/Argus
    argus_gui/resources/scripts/Argus_win.py
    argus_gui/resources/scripts/argus-sync
    argus_gui/resources/scripts/argus-patterns
    argus_gui/resources/scripts/argus-calibrate
    argus_gui/resources/scripts/argus-log
    argus_gui/resources/scripts/argus-wand
    argus_gui/resources/scripts/argus-show
